style: fixed a layout overflow issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -16,13 +16,12 @@
     --font-size: 1rem;
 }
 
-body {
+html {
     background-color: var(--color-bg);
     font-family: var(--font-inter);
     font-size: var(--font-size);
     color: var(--color-text);
     overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 
 .move {
@@ -31,6 +30,10 @@ body {
 .close {
     transform: translateY(-100%);
     /*opacity: 0;*/
+}
+
+.will-change-transform {
+    will-change: transform;
 }
 
 @keyframes move {
